--- a/css/index.css
+++ b/css/index.css
@@ -137,6 +137,21 @@ button[disabled=disabled], button:disabled {
 	background-color: red;
 }
 
-#mensagem-erro{
+#mensagens-erro{
 	color: red;
+}
+
+.fadeOut{
+	opacity: 0;
+	transition: 0.5;
+}
+
+#filtrar-tabela{
+	width: 200px;
+	height: 35px;
+	margin-bottom: 10px;
+}
+
+.invisivel{
+	display: none;
 }
